--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "better-scroll": "^1.5.4",
+    "jquery": "^3.2.1",
     "vue": "^2.5.2",
     "vue-resource": "^1.3.4",
     "vue-router": "3.0.1"
